# rockstream

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_POLICY.md  DESIGN.md  IMPLEMENTATION_PLAN.md  IVM.md  Makefile  README.md  ROADMAP.md  deny.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  simulation-soak.yml
adrs/: application-ergonomics.md  dead-letter-queue.md  explain-levels.md  first-run-ergonomics.md  four-knobs.md  observability-ergonomics.md  resource-groups.md  resource-usage-visibility.md  subscribe-ergonomics.md  view-lifecycle.md  workloads.md
crates/rockstream/: Cargo.toml
crates/rockstream-catalog/: Cargo.toml
crates/rockstream-catalog/src/: codec.rs  compat.rs  error.rs  lib.rs  schema.rs  store.rs  workload_store.rs
crates/rockstream-cli/: Cargo.toml
crates/rockstream-cli/src/: lib.rs
crates/rockstream-connectors/: Cargo.toml
crates/rockstream-connectors/src/: fixed_source.rs  generate_rows.rs  kafka_sink.rs  lib.rs  noop_sink.rs  noop_source.rs  postgres_sink.rs  s3_sink.rs  sink.rs  source.rs
crates/rockstream-control/: Cargo.toml
crates/rockstream-control/src/: audit.rs  lib.rs  placement.rs  scheduler.rs  service.rs  shard.rs  tls.rs  topology.rs
crates/rockstream-diff/: Cargo.toml
crates/rockstream-diff/src/: lib.rs
crates/rockstream-gateway/: Cargo.toml
crates/rockstream-gateway/src/: lib.rs
crates/rockstream-ops/: Cargo.toml
crates/rockstream-ops/benches/: ivm_vs_batch.rs  operator_throughput.rs  storage_budget.rs
crates/rockstream-ops/src/: aggregate.rs  distinct.rs  distributed_recursive.rs  epoch_output.rs  filter.rs  join.rs  lib.rs  map.rs  min_max.rs  noop.rs  operator.rs  outer_join.rs  project.rs  recursive.rs  row_codec.rs  scheduler.rs  set_ops.rs  snapshot.rs  task.rs  top_k.rs  tumble.rs  window.rs
crates/rockstream-oracle/: Cargo.toml
crates/rockstream-oracle/src/: aggregate_oracle.rs  batch_oracle.rs  bootstrap_oracle.rs  distributed_recursive_oracle.rs  fuzzer_oracle.rs  join_oracle.rs  lateral_srf_oracle.rs  law_equiv_oracle.rs  law_harness.rs  lib.rs  min_max_oracle.rs  nexmark_oracle.rs  recursive_oracle.rs  set_op_oracle.rs  top_k_oracle.rs  tpch_oracle.rs  tumble_oracle.rs  view_dag_oracle.rs  window_oracle.rs
crates/rockstream-oracle/tests/: aggregate_tests.rs  bootstrap_tests.rs  distributed_recursive_tests.rs  filter_project_map_tests.proptest-regressions  filter_project_map_tests.rs  fuzzer_tests.rs  join_tests.rs  lateral_srf_tests.rs  law_equiv_tests.rs  law_property_tests.rs  min_max_tests.rs  nexmark_tests.rs  outer_join_tests.proptest-regressions  outer_join_tests.rs  recursive_tests.rs  set_op_tests.proptest-regressions  set_op_tests.rs  top_k_tests.proptest-regressions  top_k_tests.rs  tpch_tests.rs  tumble_tests.rs  view_dag_tests.rs  window_tests.proptest-regressions  window_tests.rs
crates/rockstream-plan/: Cargo.toml
crates/rockstream-plan/src/: dag.rs  explain.rs  lib.rs
crates/rockstream-runtime/: Cargo.toml
crates/rockstream-runtime/src/: bench.rs  checkpoint.rs  epoch_coordinator.rs  explain.rs  frontier.rs  lib.rs  pipeline.rs  recovery.rs  scaling.rs  split.rs  support_bundle.rs
crates/rockstream-runtime/src/exchange/: arrow_ipc.rs  combiner.rs  credit.rs  durable.rs  loopback.rs  mod.rs  path.rs
crates/rockstream-runtime/tests/: checkpoint_tests.rs  dev_alpha_tests.rs  durable_shuffle.rs  epoch_commit_tests.rs  exchange_combiner.rs  frontier_protocol.rs  recovery_tests.rs  split_merge_tests.rs
crates/rockstream-sim/: Cargo.toml
crates/rockstream-sim/src/: brownout.rs  buggify.rs  chaos.rs  clock.rs  compaction.rs  coord_faults.rs  fault_model.rs  law_faults.rs  lib.rs  liveness.rs  network.rs  object_store.rs  paired_assert.rs  runtime.rs  shard_map.rs  sim.rs  soak.rs  tests.rs  tokio_rt.rs  two_pc.rs  wire_version.rs
crates/rockstream-sim/tests/: chaos_tests.rs
crates/rockstream-sql/: Cargo.toml
crates/rockstream-sql/src/: lib.rs
crates/rockstream-storage/: Cargo.toml
crates/rockstream-storage/src/: error.rs  keys.rs  lib.rs  merge_registry.rs  reader.rs  shard_db.rs  tests.rs  wal.rs  wal_cache.rs
crates/rockstream-types/: Cargo.toml
crates/rockstream-types/src/: arrow_batch.rs  audit.rs  batch.rs  error_code.rs  (+12 more)
crates/rockstream/src/: main.rs
docs/: concepts-toc.md  concepts.md  distributed-architecture.md  ivm-operators.md
ideas/: crdts.md  optimistic-locking-crdts.md
plans/: full-assessment-v0.10.md  full-assessment-v0.18.md  full-assessment-v0.36.md  full-assessment-v0.4.md  full-assessment.md  patents-report.md  phase4-signoff.md  phase5-signoff.md  plan-assessment-v0.4.md  prior-art.md
scripts/: check-exit-criteria.sh
sign-offs/: v0.1.md  v0.10.md  v0.11.md  v0.12.md  v0.13.md  v0.14.md  v0.15.md  v0.16.md  v0.17.md  v0.18.md  v0.19.md  v0.2.md  v0.20.md  v0.21.md  v0.22.md  v0.23.md  v0.24.md  v0.25.md  v0.26.md  v0.27.md  v0.28.md  v0.29.md  v0.3.md  v0.30.md  v0.31.md  v0.32.md  v0.33.md  v0.34.md  v0.35.md  v0.36.md  v0.37.md  v0.38.md  v0.4.md  v0.5.md  v0.6.md  v0.7.md  v0.8.md  v0.9.md
tmp/: storage-budget-bench-commit.txt  storage-budget-creds-commit.txt  storage-budget-gates-commit.txt  storage-budget-noop-gate-commit.txt  storage-budget-probe-commit.txt  storage-budget-skip-azure-commit.txt  storage-budget-write-amp-optin-commit.txt  v0.13-commit.txt  v0.13-pr-body.md  v0.14-commit.txt  v0.14-pr-body.md  v0.15-commit.txt  v0.15-pr-body.md  v0.16-commit.txt  v0.16-pr-body.md  v0.17-commit.txt  v0.17-pr-body.md  v0.18-assessment-commit.txt  v0.18-assessment-update-commit.txt  v0.18-commit.txt  v0.18-recommendations-apply-commit.txt  v0.18-recommendations-commit.txt  v0.19-commit.txt  v0.19-pr-body.md  v0.19-signoff-commit.txt  v0.20-commit.txt  v0.20-pr-body.md  v0.21-commit.txt  v0.21-fixup.txt  v0.21-pr-body.md  v0.22-commit.txt  v0.22-pr-body.md  v0.23-commit.txt  v0.23-pr-body.md  v0.24-commit.txt  v0.24-pr-body.md  v0.25-commit.txt  v0.25-pr-body.md  v0.26-commit.txt  v0.26-pr-body.md  (+7 more)
tmp/wip-v0.19/: window.rs  window_oracle.rs  window_tests.rs
(+9 files in other folders)
