[package]
name = "rockstream-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Schema catalog and plan persistence for RockStream"

[dependencies]
rockstream-types = { workspace = true }
rockstream-plan = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rockstream-diff = { workspace = true }
