[package]
name = "rockstream-connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Source and sink connector implementations for RockStream"

[dependencies]
rockstream-types = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
