[package]
name = "rockstream-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Control-plane service for RockStream cluster management"

[dependencies]
rockstream-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
