[package]
name = "rockstream-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Operator trait and per-operator implementations for RockStream"

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
rockstream-sim = { workspace = true }
rockstream-plan = { workspace = true }
rockstream-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true, features = ["azure"] }
rockstream-storage = { workspace = true }
slatedb = { workspace = true }

[[bench]]
name = "operator_throughput"
harness = false

[[bench]]
name = "storage_budget"
harness = false
