[package]
name = "rockstream-oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Batch reference engine and property-test harness for RockStream correctness"

[dependencies]
rockstream-types = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
