[package]
name = "rockstream-oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Batch reference engine and property-test harness for RockStream correctness"

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
rockstream-types = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
rockstream-diff = { workspace = true }
rockstream-ops = { workspace = true }
rockstream-plan = { workspace = true }
rockstream-storage = { workspace = true }
object_store = { workspace = true }
