[package]
name = "rockstream-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Worker process, circuit executor, scheduler, and exchange for RockStream"

[dependencies]
rockstream-types = { workspace = true }
rockstream-connectors = { workspace = true }
rockstream-control = { workspace = true }
rockstream-ops = { workspace = true }
rockstream-storage = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
object_store = { workspace = true }
