[package]
name = "rockstream-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deterministic simulation harness for RockStream (SimRuntime, buggify)"

[features]
default = []
simulation = []

[dependencies]
rockstream-types = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
bytes = "1"
rand = { version = "0.8", features = ["small_rng"] }
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
