[package]
name = "rockstream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Massively-parallel incremental view maintenance on SlateDB"

[[bin]]
name = "rockstream"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rockstream-runtime = { workspace = true }
rockstream-control = { workspace = true }
